ssh works again
removes verbose arg and put everything together

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,17 +19,14 @@ jobs:
           name: ship it
           command: docker push noslouch/wedding-api
       - run:
-          name: setup envvars
+          name: pull down image and start with envvars
           command: |
             ssh-keyscan melissaandbriangetmarried.com >> ~/.ssh/known_hosts
             env | sed -n 's/DEPLOY_//p' > .env
             scp .env bwhitton@melissaandbriangetmarried.com:~
-      - run:
-          name: pull down image and start with envvars
-          command: |
-            ssh bwhitton@melissaandbriangetmarried.com -v "docker pull noslouch/wedding-api"
-            ssh bwhitton@melissaandbriangetmarried.com -v "docker stop wedding-api && docker rm wedding-api"
-            ssh bwhitton@melissaandbriangetmarried.com -v "docker run \
+            ssh bwhitton@melissaandbriangetmarried.com "docker pull noslouch/wedding-api"
+            ssh bwhitton@melissaandbriangetmarried.com "docker stop wedding-api && docker rm wedding-api"
+            ssh bwhitton@melissaandbriangetmarried.com "docker run \
                                                         --name wedding-api \
                                                         --restart always \
                                                         --env-file ~/.env \
