don't use a virtual env in an image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
   web:
     build: .
-    command: /venv/bin/python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
