run tests on circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: build image
           command: docker build -t noslouch/wedding-api .
       - run:
+          name: test
+          command: docker-compose -f docker-compose-test.yml run web python manage.py test
+      - run:
           name: ship it
           command: docker push noslouch/wedding-api
       - run:
