--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,9 @@ jobs:
       - run:
           name: build image
           command: docker build -t noslouch/wedding-api .
-      # not enough resources on CIRCLE
-      # - run:
-      #     name: test
-      #     command: docker-compose -f docker-compose-test.yml run web python manage.py test
+      - run:
+          name: test
+          command: docker-compose -f docker-compose-test.yml run web python manage.py test
       - run:
           name: ship it
           command: docker push noslouch/wedding-api
