--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -2,8 +2,9 @@ version: '3.6'
 
 services:
   web:
-    image: noslouch/wedding-api
-    command: python manage.py runserver 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: Dockerfile-dev
     volumes:
       - .:/code
     ports:
